# codex-memory

./: Cargo.toml  LICENSE  NOTICE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: _config.yml  getting-started.md  index.md  operations.md  platforms.md  quickstart.md  testing.md
docs/_layouts/: default.html  home.html  page.html
docs/assets/: main.css  main.scss  site.css
examples/: codex-memory.toml
launchd/: com.alphaone.codex-memory.plist.in
scripts/: coverage.sh  install.sh  localhost-check.sh  smoke.sh  test.sh  uninstall.sh
src/: api.rs  config.rs  ingest.rs  lib.rs  model.rs  service.rs  storage.rs  toon.rs
systemd/: codex-memory.service.in
tests/: cli_flow.rs
