[package]
name = "codex-memory"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["AlphaOne LLC"]
description = "Lightweight Rust localhost daemon and CLI for persistent Codex memory with TOON export."
repository = "https://github.com/AlphaOne-LLC/codex-memory"
homepage = "https://alphaonedev.github.io/codex-memory/"
documentation = "https://alphaonedev.github.io/codex-memory/"
readme = "README.md"
keywords = ["codex", "memory", "daemon", "sqlite", "toon"]
categories = ["command-line-utilities", "database"]

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.23"
tower = { version = "0.5", features = ["util"] }
